fix hero text bg to be visible in protanopia filter

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -211,7 +211,7 @@ h4 {
 
 .hero-text-background {
     top: calc(50% - 80px);
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.8);
     border-radius: 50%;
     border: 3px solid black;
     margin: 0 auto;
